# vulcanwm-flask

./: README.md  app.py  functions.py  lists.py  main.py  pyproject.toml  requirements.txt
static/: main.css  sticky.js
templates/: contact.html  error.html  index.html  newsletter.html  projects.html
