[tool.poetry]
name = "repl_python3_VulcanWM"
version = "0.1.0"
description = ""
authors = ["VulcanWM <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pymongo = "^4.1.1"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
